test/checker/register/invalid/wrong_parameter_quantity.km
type Triple[A,B,C] (A, B, C);

type Foo[A,B]  (Triple[A,B]);
